# inputdatamanagement

./: LICENSE  README.md  pyproject.toml
src/: __init__.py
src/cli/: noresm_inputdata.py
src/noresm_inputdatamanagement/: backup.py  const.py  createfilelists.py
src/noresm_inputdatamanagement/cli/: noresm_inputdata.py
tests/data/: destination_files.txt
