[project]
name = "noresm-inputdatamanagement"
version = "0.1.2"
description = "command line tool for NorESM input data management on sigma2 ressources"
authors = [
    {name = "Jan Griesfeller",email = "jan.griesfeller@met.no"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.urls]
homepage = "https://github.com/NorESMhub/inputdatamanagement"
repository = "https://github.com/NorESMhub/inputdatamanagement"

[project.scripts]
noresm_inputdata = 'noresm_inputdatamanagement.cli.noresm_inputdata:run'

[tool.setuptools]
packages = ["noresm_inputdatamanagement", "noresm_inputdatamanagement.cli"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
